# cmngr

./: CODEOWNERS  LICENSE  Makefile  README.md
charmongerai/: setup.cfg
charmongerai-api/: README.md  charmongerai-api.py  requirements.txt
charmongerai-api/example/: charmongerai-api-client.py
charmongerai-web/: package-lock.json  package.json
charmongerai-web/src/lib/: chatbot-websocket.svelte  store.js
charmongerai-web/src/routes/: +layout.svelte  +page.svelte
charmongerai/src/charmongerai/: charmongerai.py  cli.py  config.py  context.py  model.py  settings.py  util.py
charmongerai/src/charmongerai/simulation/: agent.py
cmngr/: setup.cfg
cmngr-api/: README.md  cmngr-api.py  requirements.txt
cmngr-api/example/: cmngr-api-client.py
cmngr-web/: package-lock.json  package.json
cmngr-web/src/lib/: chatbot-websocket.svelte  store.js
cmngr-web/src/routes/: +layout.svelte  +page.svelte
cmngr/src/cmngr/: cli.py  cmngr.py  config.py  context.py  model.py  settings.py  util.py
cmngr/src/cmngr/simulation/: agent.py  simulation.py
