[metadata]
name = charmongerai
version = 0.0.2
author = vd7dv7
author_email = vd7dv7@gmail.com
description = AI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vd7dv7/charmongerai
project_urls =
    Bug Tracker = https://github.com/vd7dv7/charmongerai/issues
    Changelog = https://github.com/vd7dv7/charmongerai/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    rich
    textual
    typer
    termcolor
    tiktoken
    # ml related
    faiss-cpu
    openai
    pinecone-client
    langchain==0.0.154
    discord.py
    inquirer

[options.extras_require]
dev =
    black
    Faker
    flake8
    isort
    memray
    pdbpp
    pytest
    richbench

[options.packages.find]
where =
    src

[options.entry_points]
console_scripts =
    charmongerai = charmongerai:cli
